--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ server.port = 8090
 spring.datasource.url=jdbc:mysql://172.17.0.2:3306/blog
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
